[tool.poetry]
name = "cessoc"
version = "1.0.0"
description = "Master CES SOC python library"
authors = ["multiple"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pika = "^1.3.1"
requests = "^2.31.0"
boto3 = "^1.28.40"
python-json-logger = "^2.0.7"
tzlocal = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"